# hotspot

./: .gitignore  .pre-commit-config.yaml  config.py  hotspot.py  package.json  pyproject.toml  requirements.aws.txt  requirements.ingest.txt  requirements.txt  setup.py  useful.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
aws/: api_stack.py  app.py  hotspot_stack.py  requirements.txt
components/: __init__.py  cards.py  charts.py
hotspot/: hotspot.py  pyproject.toml  requirements.txt
hotspot/.streamlit/: config.toml
hotspot/lib/: utils.py
hotspot_api/: Dockerfile
ingest/: Dockerfile  ingest.py
ingest/test/: test_ingest.py
lambda/hotspot_api/: Dockerfile  hotspot_api.py  requirements.txt
lambda/ingest/: ingest.py  requirements.txt
lambda/ingest/test/: test_ingest.py
lambda/prep_hotspot_api/: prep_hotspot_api.py  requirements.txt
lambda/transform/: requirements.txt  transform.py
lambda/transform/test/: test_transform.py
lambda/transform/test/data/: event.json  res.json
lib/: utils.py
prep_hotspot_api/: Dockerfile
transform/: Dockerfile  requirements.txt  transform.py
transform/test/: test_transform.py
transform/test/data/: event.json  res.json
