[project]
name = "hotspot"
version = "0.1.0"
description = "Spotify data wrangling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-aws-glue-alpha>=2.232.2a0",
    "aws-cdk-lib>=2.232.2",
    "awswrangler==3.13.0",
    "boto3==1.28.40",
    "mock==4.0.3",
    "pre-commit==2.20.0",
    "pytest==7.2.0",
    "spotipy==2.21.0",
]
