[project]
name = "hotspot"
version = "0.1.0"
description = "Spotify data wrangling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler==3.14.0",
    "boto3==1.41.5",
    "pandas>=2.3.3",
    "streamlit>=1.52.1",
]

[dependency-groups]
aws = [
    "aws-cdk-aws-glue-alpha>=2.232.2a0",
    "aws-cdk-lib>=2.232.2",
]
dev = [
    "mock>=5.2.0",
    "pre-commit>=4.5.0",
    "pytest>=7.2.0",
]
